--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Positivus</title>
     <link rel="stylesheet" href="styles/style.css">
 </head>
-<body>
+<body class="body-main">
     <header class="header-logos">
         <img src="images/pozitivus.svg" alt="Positivus Logo" class="header-logo">
         <nav class="nav">
