--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
 <body class="body-main">
     <header class="header-logos">
         <img src="images/pozitivus.svg" alt="Positivus Logo" class="header-logo">
+        <button class="menu-toggle">☰</button>
         <nav class="nav">
             <a href="#about" class="nav-link">About us</a>
             <a href="#services" class="nav-link">Services</a>
