--- a/index.html
+++ b/index.html
@@ -22,9 +22,9 @@
                 <div class="modal-content">
                     <span class="close">&times;</span>
                     <form id="loginForm">
-                        <input type="emaily" placeholder="Email" required />
-                        <input type="password" placeholder="Password" required />
-                        <button type="submity">Enter</button>
+                        <input type="email" placeholder="Email" required >
+                        <input type="password" placeholder="Password" required >
+                        <button type="submit">Enter</button>
                     </form>
                 </div>
             </div>
@@ -35,8 +35,6 @@
     <span class="burger-line"></span>
   </button>
 </header>
-    </header>
-
     <main class="main">
         <section class="hero">
             <div class="hero-content">
@@ -461,17 +459,16 @@
                         </div>
                     </div>
                     <div class="controls">
-                        <button id="prevBtn"><</button>
+                        <button id="prevBtn">←</button>
                         <div class="dots">
                             <span class="dot active"></span>
                             <span class="dot"></span>
                             <span class="dot"></span>
                         </div>
-                        <button id="nextBtn">></button>
+                        <button id="nextBtn">→</button>
                     </div>
                 </div>
             </div>
-        </div>
     </section>
     <section class="contact-form-section">
         <div class="services-main">
@@ -502,7 +499,7 @@
                             <label for="message">Message*</label>
                             <textarea id="message" name="message" placeholder="Message"></textarea>
                         </div>
-                        <button type="submit" class="submit-button">Send Message</button>
+                        <button type="submit" class="submity-button">Send Message</button>
                     </form>
                 </div>
                 <div class="visual-element-contact">
@@ -546,7 +543,7 @@
                     <div class="footer-right-text">
                         <form class="subscribe-form">
                             <input type="email" placeholder="Email" class="subscribe-input">
-                            <button type="submit" class="subscribe-btn">Subscribe to news</button>
+                            <button class="subscribe-btn">Subscribe to news</button>
                         </form>
                     </div>
                 </div>
